migration/aitp-ai/sunbird-mcp-server/service-sunbird-mcp-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sunbird-mcp-server
  name: sunbird-mcp-server
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sunbird-mcp-server
  sessionAffinity: None
  type: ClusterIP
