migration/aitp-ai/sunbird-mcp-server/route-sunbird-mcp-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: API route for Sunbird MCP Server
    haproxy.router.openshift.io/timeout: 300s
  labels:
    app: sunbird-mcp-server
    app.kubernetes.io/component: mcp-server
    app.kubernetes.io/name: sunbird-mcp-server
    app.kubernetes.io/part-of: dcim-integration
    environment: production
  name: sunbird-mcp-api
spec:
  host: dcim-mcp-api.apps.ocp419.crucible.iisl.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sunbird-mcp-server
    weight: 100
  wildcardPolicy: None
