migration/aitp-ai/sunbird-mcp-server/route-sunbird-mcp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sunbird-mcp-server
  name: sunbird-mcp
spec:
  host: sunbird-mcp.apps.ocp419.crucible.iisl.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sunbird-mcp-server
    weight: 100
  wildcardPolicy: None
